# Desk_Assistant

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  font5x7.c  main.c  ssd1306.c
drivers/: font5x7.h  ssd1306.h
input/: buttons.c  buttons.h
system/: events.h
tasks/: task_mngr.c  task_mngr.h
ui/: ui.c  ui.h
